refactor: Fix typos, Windows tests